--- a/templates/default/header.html
+++ b/templates/default/header.html
@@ -125,13 +125,20 @@
                 {% endif %}
                 {% if perm_is_godlike %}
                 <li class="p-2">
-                    <a href="{{ base_url_prefix }}/groups" class="nav-link text-{{ current_page in ['list_groups', 'add_group', 'edit_group', 'manage_group_members', 'manage_group_zones'] ? 'primary' : 'secondary' }}"><i class="bi bi-people-fill fs-5"></i></a>
-                    <a class="text-{{ current_page in ['list_groups', 'add_group', 'edit_group', 'manage_group_members', 'manage_group_zones'] ? 'primary' : 'secondary' }} text-decoration-none dropdown-toggle" data-bs-toggle="dropdown"
+                    <a href="{{ base_url_prefix }}/groups" class="nav-link text-{{ current_page in ['list_groups', 'add_group', 'edit_group', 'manage_group_members', 'manage_group_zones', 'list_log_groups'] ? 'primary' : 'secondary' }}"><i class="bi bi-people-fill fs-5"></i></a>
+                    <a class="text-{{ current_page in ['list_groups', 'add_group', 'edit_group', 'manage_group_members', 'manage_group_zones', 'list_log_groups'] ? 'primary' : 'secondary' }} text-decoration-none dropdown-toggle" data-bs-toggle="dropdown"
                        href="#"
                        role="button">{% trans %}Groups{% endtrans %}</a>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item {{ current_page == 'list_groups' ? 'active' : '' }}" href="{{ base_url_prefix }}/groups"><i class="bi bi-collection-fill me-2"></i>{% trans %}List groups{% endtrans %}</a></li>
                         <li><a class="dropdown-item {{ current_page == 'add_group' ? 'active' : '' }}" href="{{ base_url_prefix }}/groups/add"><i class="bi bi-plus-circle me-2"></i>{% trans %}Add group{% endtrans %}</a></li>
+                        {% if dblog_use == true %}
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+                        <li><a class="dropdown-item {{ current_page == 'list_log_groups' ? 'active' : '' }}"
+                               href="{{ base_url_prefix }}/groups/logs"><i class="bi bi-journal-text me-2"></i>{% trans %}Group logs{% endtrans %}</a></li>
+                        {% endif %}
                     </ul>
                 </li>
                 {% endif %}
