--- a/templates/modern/header.html
+++ b/templates/modern/header.html
@@ -204,6 +204,13 @@
                                     <i class="bi bi-plus-circle me-2"></i>{% trans %}Add group{% endtrans %}
                                 </a>
                             </li>
+                            {% if dblog_use == true %}
+                            <li class="nav-item">
+                                <a class="nav-link nav-link-sm {{ current_page == 'list_log_groups' ? 'active' : '' }}" href="{{ base_url_prefix }}/groups/logs">
+                                    <i class="bi bi-journal-text me-2"></i>{% trans %}Group logs{% endtrans %}
+                                </a>
+                            </li>
+                            {% endif %}
                         </ul>
                     </li>
                     {% endif %}
