--- a/templates/default/edit_user.html
+++ b/templates/default/edit_user.html
@@ -71,7 +71,7 @@
                             {% endif %}
                             {% endfor %}
                         </select>
-                        <small class="text-muted">{% trans %}Select permissions for this user{% endtrans %}</small>
+                        <small class="text-muted">{% trans %}Permissions from this template will apply globally across the entire system for this user{% endtrans %}</small>
                     </div>
                     {% endif %}
 
