--- a/templates/default/index.html
+++ b/templates/default/index.html
@@ -303,7 +303,7 @@
                 <h6 class="card-title text-center text-truncate d-none d-md-block">{% trans %}Users{% endtrans %}</h6>
                 <p class="card-text small text-muted text-center d-none d-lg-block">{% trans %}Manage system users and access{% endtrans %}</p>
                 <a href="{{ base_url_prefix }}/users" class="btn btn-light btn-sm mt-2" data-testid="user-administration-link">
-                    <span class="d-none d-lg-inline">{% trans %}User administration{% endtrans %}</span>
+                    <span class="d-none d-lg-inline">{% trans %}List users{% endtrans %}</span>
                     <span class="d-lg-none">{% trans %}Users{% endtrans %}</span>
                 </a>
             </div>
