--- a/templates/modern/header.html
+++ b/templates/modern/header.html
@@ -166,7 +166,7 @@
                         <ul class="nav nav-pills flex-column ms-3">
                             <li class="nav-item">
                                 <a class="nav-link nav-link-sm {{ current_page == 'users' ? 'active' : '' }}" href="{{ base_url_prefix }}/users">
-                                    <i class="bi bi-person-gear me-2"></i>{% trans %}User administration{% endtrans %}
+                                    <i class="bi bi-person-gear me-2"></i>{% trans %}List users{% endtrans %}
                                 </a>
                             </li>
                             {% if perm_add_new %}
