--- a/templates/modern/index.html
+++ b/templates/modern/index.html
@@ -196,7 +196,7 @@
                     </div>
                 </div>
                 <a href="{{ base_url_prefix }}/users" class="btn btn-sm btn-outline-primary mt-2" data-testid="user-administration-link">
-                    {% trans %}User Administration{% endtrans %}
+                    {% trans %}List users{% endtrans %}
                 </a>
             </div>
         </div>
