--- a/templates/default/header.html
+++ b/templates/default/header.html
@@ -147,13 +147,13 @@
                     <a href="{{ base_url_prefix }}/permissions/templates" class="nav-link text-{{ current_page in ['list_perm_templ', 'add_perm_templ', 'edit_perm_templ'] ? 'primary' : 'secondary' }} text-center"><i class="bi bi-shield-lock fs-5"></i></a>
                     <a class="text-{{ current_page in ['list_perm_templ', 'add_perm_templ', 'edit_perm_templ'] ? 'primary' : 'secondary' }} text-decoration-none dropdown-toggle" data-bs-toggle="dropdown"
                        href="#"
-                       role="button">{% trans %}Permissions{% endtrans %}</a>
+                       role="button">{% trans %}Perms{% endtrans %}</a>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item {{ current_page == 'list_perm_templ' ? 'active' : '' }}"
-                               href="{{ base_url_prefix }}/permissions/templates"><i class="bi bi-shield-fill-check me-2"></i>{% trans %}List permission templates{% endtrans %}</a></li>
+                               href="{{ base_url_prefix }}/permissions/templates"><i class="bi bi-shield-fill-check me-2"></i>{% trans %}List templates{% endtrans %}</a></li>
                         {% if perm_templ_perm_add %}
                         <li><a class="dropdown-item {{ current_page == 'add_perm_templ' ? 'active' : '' }}"
-                               href="{{ base_url_prefix }}/permissions/templates/add"><i class="bi bi-shield-plus me-2"></i>{% trans %}Add permission template{% endtrans %}</a></li>
+                               href="{{ base_url_prefix }}/permissions/templates/add"><i class="bi bi-shield-plus me-2"></i>{% trans %}Add template{% endtrans %}</a></li>
                         {% endif %}
                     </ul>
                 </li>
